# mcp-solve-it

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.live  Dockerfile.test  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.live.yml  docker-compose.yml  docker-entrypoint-live.sh  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-automerge.yml  dependency-review.yml  docker-latest.yml  docker-live.yml  docker-monthly.yml  docker-release.yml  gate.yml  license-compliance.yml  scorecard.yml  security-monitor.yml
config/: default.toml
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md  getting-started.md  index.md
docs/architecture/: overview.md
docs/deployment/: docker.md  kubernetes.md
docs/guides/: for-forensic-analysts.md  for-researchers.md  integration.md  troubleshooting.md
docs/reference/: environment-variables.md  tools-overview.md
scripts/: generate_signing_key.py  validate_dataset.py  verify_provenance.py
src/fss_mcp_solve_it/: __init__.py  solveit_init.py
src/fss_mcp_solve_it/tools/: solveit_tools.py
src/mcp_chassis/: __init__.py  __main__.py  config.py  context.py  errors.py  logging_config.py  server.py
src/mcp_chassis/diagnostics/: health.py
src/mcp_chassis/extensions/: __init__.py  batch.py  solveit_init.py
src/mcp_chassis/extensions/tools/: solveit_tools.py
src/mcp_chassis/middleware/: pipeline.py
src/mcp_chassis/security/: auth.py  fit.py  profiles.py  rate_limiter.py  sanitization.py  validation.py
src/mcp_chassis/transport/: __init__.py  http.py  stdio.py
src/mcp_chassis/utils/: fss_context.py  integrity.py  metrics.py  observer.py  provenance.py  telemetry.py
tests/: __init__.py  conftest.py
tests/images/: conftest.py  image_configs.py  test_auth_token.py  test_cryptography.py  test_env_config.py  test_error_handling.py  test_http_transport.py  test_kb_core.py  test_kb_extended.py  test_mode_specific.py  test_otel.py  test_otel_collector.py  test_provenance.py  test_security.py  test_startup.py  test_tools_list.py
tests/integration/: conftest.py  test_known_answers.py  test_solveit_differential.py  test_stdio_integration.py
tests/stress/: locustfile.py  locustfile_stepped.py
tests/unit/: __init__.py  test_auth.py  test_batch.py  test_config.py  test_context.py  test_env_file.py  test_errors.py  test_fit.py  test_health.py  test_integrity.py  test_io_limits.py  test_logging_config.py  test_metrics.py  test_pipeline.py  test_provenance.py  test_rate_limiter.py  test_server.py  test_solveit_init.py  test_solveit_tools.py  test_telemetry.py  test_validation.py
