[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fss-mcp-solve-it"
version = "1.2.0"
description = "FSS-compliant MCP server for the SOLVE-IT digital forensics knowledge base"
requires-python = ">=3.11"
dependencies = [
    "fss-mcp[http,auth,otel]>=1.2.0",
    "pybtex",
    "xlsxwriter",
    "rdflib>=7.0.0",
    "pyyaml",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fss_mcp_solve_it"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pip-audit>=2.7.0",
    "locust>=2.20.0",
]

[tool.uv.sources]
fss-mcp = { path = "../fss-chassis/packages/fss-mcp", editable = true }
fss-core = { path = "../fss-chassis/packages/fss-core", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "network: requires live network access to SOLVE_IT_DATA_URL (deselect with -m 'not network')",
    "slow: test spawns multiple containers or is otherwise slow",
    "auth: authentication and token behaviour tests",
    "crypto: cryptographic hash verification tests",
    "kat: Known-Answer Tests against real SOLVE-IT data (require SOLVE_IT_DATA_PATH)",
    "integration: integration tests that require external data or a running server",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
